--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&display=swap');
+
 *{box-sizing:border-box}
 html,body {
   margin: 0;
@@ -5,8 +7,7 @@ html,body {
   overflow:hidden;
   max-width: 100vw;
   max-height:100vh;
-  font-family: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Fontdiner Swanky', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -30,7 +31,7 @@ html,body {
 }
 
 h1 {
-  font-size: clamp( 16px, 10vh, 250px);
+  font-size: clamp( 32px, 20vw, 500px);
   font-weight: 700;
   line-height: 100%;
   color: #1f2a44;
